// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<UserContainer /> > should render user container 1`] = `
<section
  class="min-h-[calc(100dvh-149.5px)] md:min-h-[calc(100vh-88px)] bg-section flex justify-center items-center p-4"
>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</section>
`;

exports[`<UserContainer /> > should show Error when there is a failed search 1`] = `
<section
  class="min-h-[calc(100dvh-149.5px)] md:min-h-[calc(100vh-88px)] bg-section flex justify-center items-center p-4"
>
  <!--v-if-->
  <section
    class="flex flex-col items-center justify-center flex-1 gap-3 max-w-[400px] min-h-60 bg-white rounded-lg font-mono px-1"
  >
    <h2
      class="text-3xl font-bold text-red-600 mb-4"
    >
      User Not Found 
    </h2>
    <p
      class="text-gray-800 font-semibold text-center"
    >
      Sorry, we couldn't find the user you were looking for.
    </p>
  </section>
  <!--v-if-->
</section>
`;

exports[`<UserContainer /> > should show UserComponent when there is a successful search 1`] = `
<section
  class="min-h-[calc(100dvh-149.5px)] md:min-h-[calc(100vh-88px)] bg-section flex justify-center items-center p-4"
>
  <section
    class="container max-w-[500px] flex flex-col items-center justify-between gap-3 bg-white p-3 rounded-lg shadow-md shadow-[#00000088] relative after:absolute after:h-2 after:w-full after:bottom-[0] after:rounded-b-lg after:bg-primary-contrast"
    data-v-7af04be9=""
    id="user-info
      "
  >
    <div
      class="flex flex-col items-center justify-between gap-3"
      data-v-7af04be9=""
    >
      <img
        alt="testeuser avatar"
        aria-label="avatar"
        class="rounded-full w-28 border-4 border-primary"
        data-v-7af04be9=""
        src="https://avatars.githubusercontent.com/u/10590076?v=4"
      />
      <h2
        aria-label="user-name"
        class="font-bold font-sans text-xl tracking-wider"
        data-v-7af04be9=""
      >
        Teste User
      </h2>
      <a
        aria-label="user-github-link"
        class="font-mono font-semibold text-lg bg-primary-contrast flex items-center gap-2 p-1 rounded-md"
        data-v-7af04be9=""
        href="https://github.com/testeuser"
        target="_blank"
      >
        <img
          alt="github-logo"
          aria-label="github-logo"
          class="w-6"
          data-v-7af04be9=""
          src="/src/assets/images/github-logo.svg"
        />
        <span
          aria-label="user-github-name"
          class="text-white"
          data-v-7af04be9=""
        >
          testeuser
        </span>
      </a>
      <p
        aria-label="user-bio"
        class="font-mono break-before-auto"
        data-v-7af04be9=""
      >
        lorem ipsum dolor sit amet
      </p>
    </div>
    <div
      class="flex justify-around flex-wrap gap-3 w-[75%]"
      data-v-7af04be9=""
    >
      <p
        aria-label="user-followers"
        class="stat"
        data-v-7af04be9=""
      >
         Followers 
        <span
          class="font-bold"
          data-v-7af04be9=""
        >
          0
        </span>
      </p>
      <p
        aria-label="user-following"
        class="stat"
        data-v-7af04be9=""
      >
         Following 
        <span
          class="font-bold"
          data-v-7af04be9=""
        >
          5
        </span>
      </p>
      <p
        aria-label="user-repos"
        class="stat"
        data-v-7af04be9=""
      >
         Public Repos 
        <span
          class="font-bold"
          data-v-7af04be9=""
        >
          5
        </span>
      </p>
    </div>
    <routerlink
      aria-label="user-repos-link"
      class="bg-primary p-2 w-full text-center text-white hover:bg-primary-contrast font-mono rounded-md"
      data-v-7af04be9=""
      to="/repos"
    >
       View Repositories 
    </routerlink>
  </section>
  <!--v-if-->
  <!--v-if-->
</section>
`;

exports[`<UserContainer /> > should show loadComponent when there is a search 1`] = `
<section
  class="min-h-[calc(100dvh-149.5px)] md:min-h-[calc(100vh-88px)] bg-section flex justify-center items-center p-4"
>
  <!--v-if-->
  <!--v-if-->
  <div
    class="w-[50vw] h-[50vw] border-2 border-t-transparent border-white rounded-full animate-spin"
  />
</section>
`;
